Add sample app smoke test (#52)